test-suite: stop using `mktemp /tmp/foo`
This is needed to be compatible with the opam sandbox.

OSX doesn't support --tmpdir so we just drop the template.

--- a/test-suite/Makefile
+++ b/test-suite/Makefile
@@ -530,8 +530,8 @@ $(addsuffix .log,$(wildcard output-modulo-time/*.v)): %.v.log: %.v %.out
 	@echo "TEST      $< $(call get_coq_prog_args_in_parens,"$<")"
 	$(HIDE){ \
 	  echo $(call log_intro,$<); \
-	  tmpoutput=`mktemp /tmp/coqcheck.XXXXXX`; \
-	  tmpexpected=`mktemp /tmp/coqcheck.XXXXXX`; \
+	  tmpoutput=`mktemp`; \
+	  tmpexpected=`mktemp`; \
 	  $(coqc_interactive) "$<" $(call get_coq_prog_args,"$<") 2>&1 \
 	    | grep -v "Welcome to Coq" \
 	    | grep -v "\[Loading ML file" \
@@ -746,7 +746,7 @@ coqwc : $(patsubst %.v,%.v.log,$(wildcard coqwc/*.v))
 coqwc/%.v.log : coqwc/%.v
 	$(HIDE){ \
 	  echo $(call log_intro,$<); \
-	  tmpoutput=`mktemp /tmp/coqwc.XXXXXX`; \
+	  tmpoutput=`mktemp`; \
 	  $(BIN)coqwc $< 2>&1 > $$tmpoutput; \
 	  diff -u --strip-trailing-cr coqwc/$*.out $$tmpoutput 2>&1; R=$$?; times; \
 	  if [ $$R = 0 ]; then \
