Correctly run tests with opam
I have no clue how to get it to work with dune so I call make
directly.

We make test suite get BIN from configure.
(COQLIB was already found that way)
We also use this in CI test-suite-template instead of passing them
through the command line.

Close #17923

Might be worth adding `--with-test` in the CI `pkg:opam` script?

--- a/test-suite/Makefile
+++ b/test-suite/Makefile
@@ -37,11 +37,9 @@ endif
 # Variables
 #######################################################################
 
-# Using quotes to anticipate the possibility of spaces in the directory name
+# COQPREFIX is quoted to anticipate the possibility of spaces in the directory name
 # Note that this will later need an eval in shell to interpret the quotes
-ROOT='$(shell cd ..; pwd)'
-
-BIN:=$(ROOT)/_build/install/default/bin/
+BIN:=$(COQPREFIX)/bin/
 
 # An alternative is ifeq ($(OS),Windows_NT) using make's own variable.
 ifeq ($(ARCH),win32)
