--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -147,11 +147,8 @@ before_script:
   script:
     - cd test-suite
     - make clean
-    # careful with the ending /
-    - BIN=$(readlink -f ../_install_ci/bin)/
-    - LIB=$(readlink -f ../_install_ci/lib/coq)/
     - export OCAMLPATH=$(readlink -f ../_install_ci/lib/):"$OCAMLPATH"
-    - COQEXTRAFLAGS="${COQEXTRAFLAGS}" make -j "$NJOBS" BIN="$BIN" COQLIB="$LIB" all
+    - COQEXTRAFLAGS="${COQEXTRAFLAGS}" make -j "$NJOBS" all
   artifacts:
     name: "$CI_JOB_NAME.logs"
     when: on_failure
