--- a/dune
+++ b/dune
@@ -57,7 +57,7 @@
 ; Use summary.log as the target
 (alias
  (name runtest)
- (package coqide-server)
+ (package coq)
  (deps test-suite/summary.log))
 
 ; For make compat
