test-suite/dune: add dep on sysinit/coqargs.ml (for the update-compat test)

--- a/test-suite/dune
+++ b/test-suite/dune
@@ -26,6 +26,7 @@
    ../dev/header.ml
    ../dev/tools/update-compat.py
    ../doc/stdlib/index-list.html.template
+   ../sysinit/coqargs.ml
    ; For the misc/printers.sh test
    ../dev/incdir_dune
    ../dev/base_include
